--- a/lesson-10-cau-truc-lap/luyen-tap-vong-lap-2.1.html
+++ b/lesson-10-cau-truc-lap/luyen-tap-vong-lap-2.1.html
@@ -5,8 +5,9 @@
     <title>luyện tập vòng lặp</title>
 </head>
 <body>
+<h2> In mảng fibonacci</h2>
   <script>
-
+    function
   </script>
 </body>
 </html>
