--- a/lesson-11-array-mang/tu-dien.html
+++ b/lesson-11-array-mang/tu-dien.html
@@ -27,10 +27,10 @@
       let index_eng = 0;
       let result = '';
       for (let i = 0; i < arr_eng.length; i++) {
-        if (string == arr_eng[i]) {
+        if (string === arr_eng[i]) {
           index_eng = i;
           for (let j = 0; j < arr_viet.length; j++) {
-            if (index_eng == j) {
+            if (index_eng === j) {
               result = arr_viet[j];
             }
           }
