--- a/lesson-09-if-else-2/good-fast-cheap.html
+++ b/lesson-09-if-else-2/good-fast-cheap.html
@@ -3,8 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <title>good-fast-cheap</title>
+    <style>
+        .slidecontainer {
+            width: 100%;
+        }
+
+        .slider {
+            -webkit-appearance: none;
+            width: 100%;
+            height: 15px;
+            border-radius: 5px;
+            background: #d3d3d3;
+            outline: none;
+            opacity: 0.7;
+            -webkit-transition: .2s;
+            transition: opacity .2s;
+        }
+
+        .slider:hover {
+            opacity: 1;
+        }
+
+        .slider::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 25px;
+            height: 25px;
+            border-radius: 50%;
+            background: #04AA6D;
+            cursor: pointer;
+        }
+
+        .slider::-moz-range-thumb {
+            width: 25px;
+            height: 25px;
+            border-radius: 50%;
+            background: #04AA6D;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-  <input type="">
+    <div class="slidecontainer">
+    <input type="range" min="0" max="1" id="good" value="0" style="width: 50px" class="slider" onclick="goodClick()">
+    <label for="good" style="text-align: center;color: firebrick;font-size: 25px"><strong>Good</strong></label><br>
+    <input type="range" min="0" max="1" id="fast" value="0" style="width: 50px" class="slider" onclick="fastClick()">
+    <label for="fast" style="text-align: center;color: darkblue;font-size: 25px"><strong>Fast</strong></label><br>
+    <input type="range" min="0" max="1" id="cheap" value="0" style="width: 50px" class="slider" onclick="cheapClick()">
+    <label for="cheap" style="text-align: center;color: mediumseagreen;font-size: 25px"><strong>Cheap</strong></label><br>
+    </div>
+    <script>
+        var a=document.getElementById("good");
+        var b=document.getElementById("fast");
+        var c=document.getElementById("cheap");
+        function goodClick() {
+            if (a.value == 1){
+                if (b.value == 1) {
+                    c.value = 0;
+                }
+            }
+        }
+
+        function fastClick() {
+            if (b.value == 1){
+                if (c.value == 1) {
+                a.value = 0;
+                }
+            }
+        }
+
+        function cheapClick() {
+            if (c.value == 1){
+                if (a.value == 1) {
+                    b.value = 0;
+                }
+            }
+        }
+    </script>
 </body>
 </html>
