--- a/lesson-10-cau-truc-lap/luyen-tap-vong-lap-1.5.html
+++ b/lesson-10-cau-truc-lap/luyen-tap-vong-lap-1.5.html
@@ -7,13 +7,13 @@
 <body>
 <h2>Tính tổng của 20 số đầu tiên trong dãy fibonacci.</h2>
 <script>
-  let n1=0, n2=1, nextTerm, sum;
-  for (i=1;i<=20;i++) {
+  let n1=0, n2=1, nextTerm, sum=0;
+  for (let i=1;i<=20;i++) {
+    sum = sum + n1 ;
     nextTerm=n1+n2;
     n1=n2;
     n2=nextTerm;
-    sum=
-  }
+  } document.write(`Tổng 20 số fibonacci là ${sum} `)
 </script>
 </body>
 </html>
